# qml-bg-data

./: CMakeLists.txt  test-qmlbgdata-watchface.qml
docs/: bg-data-binary-format-spec.txt
resources/qml/: qmldir
src/: bgdatareceiver.cpp  bgdatareceiver.hpp  bgtimeseriesview.cpp  bgtimeseriesview.hpp  extappmsgreceiveriface.xml  jsonhelper.hpp  qmlbgdataplugin.cpp  qmlbgdataplugin.hpp  qmlsgvdataplugin.cpp  qmlsgvdataplugin.hpp  sgvdatareceiver.cpp  sgvdatareceiver.hpp  timeseriesview.cpp  timeseriesview.hpp
